k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web-service
spec:
  type: NodePort
  selector:
    app: demo-web
  ports:
  - port: 80
    targetPort: 3000
